--- a/dashboard/conf.ini
+++ b/dashboard/conf.ini
@@ -112,7 +112,7 @@ DEVICES=1
 # Example,
 # Windows: COMPORT=COM1
 # Linux: COMPORT=/dev/ttyUSB0
-COMPORT=
+COMPORT=/dev/ttyUSB1
 
 # BAUDRATE : baud rate, if you are unsure about this, leave default
 # default 115200
@@ -123,11 +123,10 @@ BAUDRATE=115200
 # Example,
 # DEVID=MyModem
 # DEVID=9890098900
-DEVID=
+DEVID=Vodafone
 
 #
 #[DEVICE1]
 #COMPORT=COM2
 #BAUDRATE=115200
 #DEVID=
-
